--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 REACT_APP_SERVER_URL=https://vsnserver.herokuapp.com/
 MONGODB_URI=mongodb+srv://user1:1234@tuterapp.ax7darj.mongodb.net/?retryWrites=true&w=majority
+OPENAI_API_KEY=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
