--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "@babel/core": "^7.21.4",
     "@types/node": "^18.16.3",
     "babel-loader": "^9.1.2",
