--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "webpack-cli": "^5.0.2"
+  },
+  "engines": {
+    "node": "14.17.5"
   }
+  
 }
