--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "firebase": "^10.1.0",
     "hls.js": "^1.4.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
