--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 REACT_APP_SERVER_URL=https://vsnserver.herokuapp.com/
 MONGODB_URI=mongodb+srv://user1:1234@tuterapp.ax7darj.mongodb.net/?retryWrites=true&w=majority
-REACT_APP_API_KEY=
+REACT_APP_API_KEY=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
